Codigo Ejemplo/1. Principios Universales de Diseño Software/1.2 Programa a una interfaz/CompaniaDeSoftware/src/main/java/org/example/bad/Main.java
package org.example.bad;

public class Main {
    public static void main(String[] args) {

        Compania compania = new Compania(new Arquitecto(), new Tester(), new Programador());
        System.out.println(compania.desarrollarProyecto());
    }
}